changes for jetty